--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   height: 100dvh;
-  background-color: #22272e;
-  animation: up 3s ease, down 3s ease 5s, fadeOut 3s ease 5s forwards;
+  background-color: #0d1117;
+  animation: up 2s ease, down 3s ease 5s, fadeOut 2s ease 3s forwards;
   transform: translateY(-100px);
 }
 
@@ -32,15 +32,17 @@
   animation: glowing 20s linear infinite;
   background-image: linear-gradient(
     100deg,
-    lightsalmon,
+    black,
+    white
+    /* lightsalmon,
     lightgoldenrodyellow,
     lightgreen,
     lightblue,
     plum,
     violet,
-    lightcoral
+    lightcoral */
   );
-  background-size: 800%;
+  background-size: 8000%;
   border-radius: 50%;
   width: calc(100px * 1.5);
   height: calc(100px * 1.5);
